--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-native": "0.74.5",
-    "react-native-web": "~0.19.10"
+    "react-native-web": "~0.19.10",
+    "@expo/vector-icons": "^14.0.3"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
@@ -25,6 +26,7 @@
     "eslint-config-expo": "^7.1.2",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-prettier": "^5.2.1",
+    "eslint-plugin-react-native": "^4.1.0",
     "prettier": "^3.3.3",
     "typescript": "^5.3.3"
   },
